# Whistler

./: .gitignore  LICENSE  README.md  icon.icns
.github/workflows/: release.yml
Formula/: whistler.rb
assets/: icon.icns
contents/: Info.plist
whistler/: Cargo.toml  build.rs
whistler/extensions/iconpacks/jonathanharty.gruvbox-material-icon-theme-1.1.5/: package.json
whistler/extensions/themes/sainnhe.gruvbox-material-6.5.2/: package.json
whistler/src/: app.rs  icons.rs  main.rs  message.rs  search.rs  syntax.rs  theme.rs
whistler/src/ui/: editor.rs  sidebar.rs  styles.rs
