[package]
name = "whistler"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = {version = "0.14.0", features = ["svg", "image", "advanced", "markdown"]}
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "regex-onig"]}
rfd = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.19"
